--- a/index.html
+++ b/index.html
@@ -23,19 +23,27 @@
             </div>
             <nav>
                 <ul class="nav-links">
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="index.html" data-value="nav_inicio">Inicio</a></li>
                     <li class="dropdown">
-                    <a href="#">Productos</a>
+                    <a href="#" data-value="nav_productos">Productos</a>
                         <ul class="dropdown-content">
                             <li><a href="paprika.html">Paprika</a></li>
                             <li><a href="garlic.html">Ajo</a></li>
                             <li><a href="pepper.html">Chile Ancho</a></li>
                         </ul>
                     </li>
-                    <li><a href="about_us.html">Acerca de nosotros</a></li>
-                    <li><a href="contact_us.html">Contáctanos</a></li>
-                    <li><a href="index.html"><span class="fi fi-es" title="Español"></span></a></li>
-                    <li><a href="index_english.html"><span class="fi fi-us" title="English"></span></a></li>
+                    <li><a href="about_us.html" data-value="nav_about">Acerca de nosotros</a></li>
+                    <li><a href="contact_us.html" data-value="nav_contact">Contáctanos</a></li>
+                    <li>
+                        <a href="javascript:void(0)" onclick="changeLanguage('es')">
+                            <span class="fi fi-es" title="Español"></span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javascript:void(0)" onclick="changeLanguage('en')">
+                            <span class="fi fi-us" title="English"></span>
+                        </a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -46,19 +54,19 @@
         <div class="mySlides fade">
             <div class="numbertext">1 / 3</div>
             <img src="images/pimiento_3.jpg" style="width:100%">
-            <div class="text">Los mejores productos y la mejor calidad</div>
+            <div class="text" data-value="slide1_text">Los mejores productos y la mejor calidad</div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">2 / 3</div>
             <img src="images/pimiento_6.jpg" style="width:100%">
-            <div class="text">Hecho por una cadena autosostenible.</div>
+            <div class="text" data-value="slide2_text">Hecho por una cadena autosostenible.</div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">3 / 3</div>
             <img src="images/proceso_1.jpg" style="width:100%">
-            <div class="text">Hecho por una empresa familiar.</div>
+            <div class="text" data-value="slide3_text">Hecho por una empresa familiar.</div>
         </div>
 
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -72,8 +80,8 @@
         <span class="dot" onclick="currentSlide(3)"></span>
         </div>
         <div class="main-text">
-            <h1>Agronegocios e Inversiones Gutierrez E.I.R.L.</h1>
-            <p>Somos una empresa dedicada a la producción y comercialización de ajo y capsicum, entre ají Orange, 
+            <h1 data-value="main_title">Agronegocios e Inversiones Gutierrez E.I.R.L.</h1>
+            <p data-value="main_description">Somos una empresa dedicada a la producción y comercialización de ajo y capsicum, entre ají Orange, 
                 ají amarillo, pimiento ancho, ají panca, guajillo, jalapeño y ají páprika. Constituyéndose este 
                 último en el mayor porcentaje de producción y teniendo a favor más de 20 años de experiencia en el 
                 manejo del cultivo, tiempo que ha servido para mejorar la calidad de nuestro producto de forma que 
