--- a/paprika.html
+++ b/paprika.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icons/css/flag-icons.min.css">
-    <script src="script.js" defer></script>
+    <script src="scripts.js" defer></script>
 </head>
 <body>
     <header>
@@ -18,42 +18,50 @@
             </div>
             <nav>
                 <ul class="nav-links">
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="index.html" data-value="nav_inicio">Inicio</a></li>
                     <li class="dropdown">
-                    <a href="#">Productos</a>
+                    <a href="#" data-value="nav_productos">Productos</a>
                         <ul class="dropdown-content">
                             <li><a href="paprika.html">Ají Páprika</a></li>
                             <li><a href="garlic.html">Ajo</a></li>
                             <li><a href="pepper.html">Pimiento ancho</a></li>
                         </ul>
                     </li>
-                    <li><a href="about_us.html">Acerca de nosotros</a></li>
-                    <li><a href="contact_us.html">Contáctanos</a></li>
-                    <li><a href="paprika.html"><span class="fi fi-es" title="Español"></span></a></li>
-                    <li><a href="paprika_english.html"><span class="fi fi-us" title="English"></span></a></li>
+                    <li><a href="about_us.html" data-value="nav_about">Acerca de nosotros</a></li>
+                    <li><a href="contact_us.html" data-value="nav_contact">Contáctanos</a></li>
+                    <li>
+                        <a href="javascript:void(0)" onclick="changeLanguage('es')">
+                            <span class="fi fi-es" title="Español"></span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javascript:void(0)" onclick="changeLanguage('en')">
+                            <span class="fi fi-us" title="English"></span>
+                        </a>
+                    </li>
                 </ul>
             </nav>
         </div>
-        <h1>AGRONEGOCIOS E INVERSIONES GUTIERREZ</h1>
+        <h1 data-value="main_title">AGRONEGOCIOS E INVERSIONES GUTIERREZ</h1>
     </header>
     <main>
         <div class="main-text">
-            <h2>Ají Páprika</h2>   
-            <p>Páprika (capsicum annum L.) es una variedad de pimiento dulce con la particularidad de ser alargado, distinto al 
+            <h2 data-value="paprika_title">Ají Páprika</h2>   
+            <p data-value="paprika_description">Páprika (capsicum annum L.) es una variedad de pimiento dulce con la particularidad de ser alargado, distinto al 
                 "pimiento rojo" o "pimentón". Sus características de color, intensidad de picante y sabor, cambia de acuerdo a 
                 las mejoras genéticas de la planta y las técnicas de cultivo.</p>
-            <h2>Ficha técnica</h2>
-            <h3>Color</h3>
-            <h4>Rojizo</h4>
-            <h3>Tamaño</h3>
-            <h4>>12cm - 90% max.</h4>
-            <h4>&lt;12cm - 10% min.</h4>
-            <h3>Packing</h3>
-            <h4>Cajas de cartón de 11.36 kg o 25 lb</h4>
-            <h4>Pacas prensadas de 75 kg o 165 lb</h4>
-            <h3>Humedad</h3>
-            <h4>>13% HR</h4>
-            <h2>Galería</h2>
+            <h2 data-value="paprika_specs_title">Ficha técnica</h2>
+            <h3 data-value="paprika_color_title">Color</h3>
+            <h4 data-value="paprika_color_value">Rojizo</h4>
+            <h3 data-value="paprika_size_title">Tamaño</h3>
+            <h4 data-value="paprika_size_value1">&gt;12cm - 90% max.</h4>
+            <h4 data-value="paprika_size_value2">&lt;12cm - 10% min.</h4>
+            <h3 data-value="paprika_packing_title">Packing</h3>
+            <h4 data-value="paprika_packing_value1">Cajas de cartón de 11.36 kg o 25 lb</h4>
+            <h4 data-value="paprika_packing_value2">Pacas prensadas de 75 kg o 165 lb</h4>
+            <h3 data-value="paprika_humidity_title">Humedad</h3>
+            <h4 data-value="paprika_humidity_value">&gt;13% HR</h4>
+            <h2 data-value="paprika_gallery_title">Galería</h2>
         </div>
     </main>
     <footer>
