--- a/index.html
+++ b/index.html
@@ -1,123 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AGRONEGOCIOS E INVERSIONES GUTIERREZ</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link 
-    rel="stylesheet" 
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" 
-    crossorigin="anonymous" 
-    referrerpolicy="no-referrer" 
+      rel="stylesheet" 
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icons/css/flag-icons.min.css">
-    <script src="scripts.js" defer></script>
-</head>
-<body>
-    <header>
-        <div class="header-container">
-            <div class="logo-placeholder">
-                <a href="index.html"><img id="logo" src="images/gutierrez_logo.png" alt="Logo" style="height:50px;" /> </a>
-            </div>
-            <nav>
-                <ul class="nav-links">
-                    <li><a href="index.html" data-value="nav_inicio">Inicio</a></li>
-                    <li class="dropdown">
-                    <a href="#" data-value="nav_productos">Productos</a>
-                        <ul class="dropdown-content">
-                            <li><a href="paprika.html">Paprika</a></li>
-                            <li><a href="garlic.html">Ajo</a></li>
-                            <li><a href="pepper.html">Chile Ancho</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="about_us.html" data-value="nav_about">Acerca de nosotros</a></li>
-                    <li><a href="contact_us.html" data-value="nav_contact">Contáctanos</a></li>
-                    <li>
-                        <a href="javascript:void(0)" onclick="changeLanguage('es')">
-                            <span class="fi fi-es" title="Español"></span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="javascript:void(0)" onclick="changeLanguage('en')">
-                            <span class="fi fi-us" title="English"></span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <main>
-        <div class="slideshow-container" id="main-slideshow">
-
-        <div class="mySlides fade">
-            <div class="numbertext">1 / 3</div>
-            <img src="images/pimiento_3.jpg" style="width:100%">
-            <div class="text" data-value="slide1_text">Los mejores productos y la mejor calidad</div>
-        </div>
-
-        <div class="mySlides fade">
-            <div class="numbertext">2 / 3</div>
-            <img src="images/pimiento_6.jpg" style="width:100%">
-            <div class="text" data-value="slide2_text">Hecho por una cadena autosostenible.</div>
-        </div>
-
-        <div class="mySlides fade">
-            <div class="numbertext">3 / 3</div>
-            <img src="images/proceso_1.jpg" style="width:100%">
-            <div class="text" data-value="slide3_text">Hecho por una empresa familiar.</div>
-        </div>
-
-        <a class="prev" onclick="plusSlides(-1, 'main-slideshow')">&#10094;</a>
-        <a class="next" onclick="plusSlides(1, 'main-slideshow')">&#10095;</a>
-        </div>
-        <br>
-
-        <div style="text-align:center">
-        <span class="dot" onclick="currentSlide(1, 'main-slideshow')"></span>
-        <span class="dot" onclick="currentSlide(2, 'main-slideshow')"></span>
-        <span class="dot" onclick="currentSlide(3, 'main-slideshow')"></span>
-        </div>
-        <div class="main-text">
-            <h1 data-value="main_title">Agronegocios e Inversiones Gutierrez E.I.R.L.</h1>
-            <p data-value="main_description">Somos una empresa dedicada a la producción y comercialización de ajo y capsicum, entre ají Orange, 
-                ají amarillo, pimiento ancho, ají panca, guajillo, jalapeño y ají páprika. Constituyéndose este 
-                último en el mayor porcentaje de producción y teniendo a favor más de 20 años de experiencia en el 
-                manejo del cultivo, tiempo que ha servido para mejorar la calidad de nuestro producto de forma que 
-                llegue a satisfacer los mercados internacionales más exigentes.</p>
-        </div>
-        <section class="products-preview reveal">
-            <div class="preview-text">
-                <h2 data-value="preview_titulo">Nuestros Productos</h2>
-                <p data-value="preview_descripcion">Descubre la calidad y frescura de nuestros principales cultivos de exportación.</p>
-            </div>
-
-            <div class="preview-grid">
-                <a href="paprika.html" class="product-card">
-                    <img src="images/paprika_1.jpeg" alt="Pimiento Páprika">
-                    <div class="card-title" data-value="preview-1">Pimiento Páprika</div>
-                </a>
-                <a href="garlic.html" class="product-card">
-                    <img src="images/paprika_2.avif" alt="Ajo">
-                    <div class="card-title" data-value="preview-2">Ajo</div>
-                </a>
-                <a href="pepper.html" class="product-card">
-                    <img src="images/ajo_2.jpg" alt="Pimiento Ancho">
-                    <div class="card-title" data-value="preview-3">Pimiento Ancho</div>
-                </a>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <div class="footer-container">
-            <p>&copy; 2025 Agronegocios e Inversiones Gutierrez</p>
-            <div class="social-icons">
-                <a href="https://www.facebook.com/agronegocios.gutierrez" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://www.linkedin.com/company/agronegocios-e-inversiones-gutierrez" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://wa.me/+51956899907" target="_blank"><i class="fab fa-whatsapp"></i></a>
-            </div>
-        </div> 
-    </footer>
-</body>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.0.2/css/flag-icons.min.css" />
+    <title>agroguti</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
